--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
-.vscode
+########################################
+# OS / Editor Files
+########################################
 .DS_Store
+.vscode/
